--- a/src/app/pages/admin/components/admin-iso/components/admin-returniso/admin-returniso.component.html
+++ b/src/app/pages/admin/components/admin-iso/components/admin-returniso/admin-returniso.component.html
@@ -174,9 +174,10 @@
                 Please indicate the email address of the practicum coordinator you will transfer this ISO Code to.
               </p>
               <div class="mt-4 col-span-6">
-                <label for="street-address" class="block text-sm font-medium text-gray-700">Email <address></address></label>
-                <input type="text" name="street-address" id="street-address" placeholder="coordinator.cics@ust.edu.ph"
-                  class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <select id="transfer" name="transfer" 
+                class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-green-500 focus:border-green-500 sm:text-sm">
+                  <option>coordinator.cics@ust.edu.ph</option>
+                </select>
               </div>
             </div>
           </div>
